syntax = "proto3";
package pebble;
option go_package = "./pb";

message UserRecord {
    bytes recordID = 1;
    string partitionKey = 2;
    bytes data = 3;
} 

message Record {
   string shardID = 1;
   repeated UserRecord userRecords = 2;
}

message QueryLeaderRequest {
}

message QueryLeaderResponse {
    string leaderID = 1;
    string errorCode = 2;
}

message CheckpointRequest {
    string shardID = 1;
    string workerID = 2;
    string sequenceNumber = 3; 
}

message CheckpointResponse {
    bool success = 1;
    string errorCode = 2;
}
